<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    <Button
            android:text="@string/button_send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button"
            app:layout_constraintBaseline_toBaselineOf="@+id/editText"
            app:layout_constraintStart_toEndOf="@+id/editText" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="16dp" android:layout_marginEnd="16dp" android:onClick="sendMessage"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/editText"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            app:layout_constraintEnd_toStartOf="@+id/button" android:layout_marginEnd="16dp"
            app:layout_constraintHorizontal_bias="0.5" android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent" android:inputType="text" android:hint="@string/enter_message"/>
    <Switch
            android:text="@string/bold_switch"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/bold_switch" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/editText" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="16dp" android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="300dp" android:layout_marginRight="300dp" android:textColor="@color/textColor"
            android:textStyle="bold"/>
    <Switch
            android:text="@string/italic_switch"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/italic_switch" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/bold_switch" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="16dp" android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="300dp" android:layout_marginRight="300dp" android:textColor="@color/textColor"
            android:textStyle="italic"/>
    <Switch
            android:text="@string/underline_switch"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/underline_switch" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/italic_switch" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="16dp" android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="300dp" android:layout_marginRight="300dp" android:textColor="@color/textColor"/>
</android.support.constraint.ConstraintLayout>